// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MacroList component should render active and disabled macros 1`] = `
<div
  class="component component"
>
  <div
    class="item"
  >
    Pizza Pepperoni
    <span
      class="material-icons md-2 float-right text-secondary"
    >
      auto_awesome
    </span>
  </div>
  <div
    class="item active"
  >
    Pizza Capricciosa
  </div>
  <div
    class="item disabled"
  >
    Pizza Margherita
  </div>
  <div
    class="container loader"
  >
    <div
      class="inner"
      style="min-height: 0;"
    >
      <i
        class="icon-custom icon-circle-o-notch md-spin"
        style="font-size: 40px;"
      />
    </div>
  </div>
</div>
`;

exports[`MacroList component should render the macro list 1`] = `
<div
  class="component component"
>
  <div
    class="item active"
  >
    Pizza Pepperoni
    <span
      class="material-icons md-2 float-right text-secondary"
    >
      auto_awesome
    </span>
  </div>
  <div
    class="item"
  >
    Pizza Capricciosa
  </div>
  <div
    class="item"
  >
    Pizza Margherita
  </div>
  <div
    class="container loader"
  >
    <div
      class="inner"
      style="min-height: 0;"
    >
      <i
        class="icon-custom icon-circle-o-notch md-spin"
        style="font-size: 40px;"
      />
    </div>
  </div>
</div>
`;

exports[`MacroList component should send event to segment on send 1`] = `
Array [
  Array [
    "macro-applied-searchbar",
    Object {
      "rank": undefined,
      "user_id": 2,
    },
  ],
]
`;
